2008-10-27  Alexey Proskuryakov  <ap@webkit.org>

        Fix non-Mac builds.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCoreSources.bkl:
        Renamed JSHTMLOptionElementConstructor to JSOptionConstructor.

2008-10-26  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=21886
        window.HTMLOptionElement == "[object HTMLElementConstructor]" instead of HTMLOptionElementConstructor

        Test: fast/dom/HTMLOptionElement/option-prototype.html

        We now have separate objects for window.Option and window.HTMLOptionElement - the latter
        "constructor" cannot be used to construct anything. This matches Firefox behavior.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSDOMWindowBase.cpp:
        (jsDOMWindowBaseOption):
        * bindings/js/JSHTMLOptionElementConstructor.cpp: Removed.
        * bindings/js/JSHTMLOptionElementConstructor.h: Removed.
        * bindings/js/JSOptionConstructor.cpp: Copied from WebCore/bindings/js/JSHTMLOptionElementConstructor.cpp.
        * bindings/js/JSOptionConstructor.h: Copied from WebCore/bindings/js/JSHTMLOptionElementConstructor.h.
        * html/HTMLOptionElement.idl:
        Renamed JSHTMLOptionElementConstructor to JSOptionConstructor.

        * html/HTMLOptionElement.idl: Generate a constructor.

2008-10-25  Geoffrey Garen  <ggaren@apple.com>

        Not reviewed.
        
        Try to fix Mac debug build on the buildbot.

        * platform/FileChooser.cpp:
        (WebCore::FileChooserClient::~FileChooserClient):
        * platform/FileChooser.h: Moved destructor to .cpp file, to avoid a
        weak exported symbol.

2008-10-25  Jade Han  <jade.han@nokia.com>

        Reviewed by Anders.

        Enable custom properties for Qt runtime objects in QtWebKit

        https://bugs.webkit.org/show_bug.cgi?id=21813

        * bridge/runtime_object.cpp: