@@ -1,3 +1,15 @@
+2008-10-27  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Kevin Decker.
+
+        <rdar://problem/6322650> Crash in fast/loader/simultaneous-reloads-assert.html
+        
+        Make sure to null check the NSURLConnection object.
+        
+        * platform/network/mac/ResourceHandleMac.mm:
+        (WebCore::ResourceHandle::start):
+        (WebCore::ResourceHandle::setDefersLoading):
+
 2008-10-27  Alexey Proskuryakov  <ap@webkit.org>
 
         Fix non-Mac builds.
